--- a/Views/Emprestimo/Cadastro.cshtml
+++ b/Views/Emprestimo/Cadastro.cshtml
@@ -7,26 +7,18 @@
 <div class="row justify-content-md-center">
     <form asp-action="Cadastro" method="POST" class="col-md-4">
         <fieldset>
-            <legend>Usuario</legend>
+            <legend>Usuário</legend>
             <div class="form-group">
                 <label asp-for="Emprestimo.NomeUsuario">Nome</label>
-                <input asp-for="Emprestimo.NomeUsuario" class="form-control"/>
+                <input asp-for="Emprestimo.NomeUsuario" class="form-control" required/>
             </div>
             <div class="form-group">
                 <label asp-for="Emprestimo.Telefone">Telefone</label>
-                <input asp-for="Emprestimo.Telefone" class="form-control"/>
+                <input asp-for="Emprestimo.Telefone" class="form-control" required/>
             </div>
         </fieldset>
         <fieldset>
             <legend>Livro</legend>
-            <div class="form-group">
-                <label asp-for="Emprestimo.DataEmprestimo">Data de Empréstimo</label>
-                <input type="date" asp-for="Emprestimo.DataEmprestimo" class="form-control"/>
-            </div>
-            <div class="form-group">
-                <label asp-for="Emprestimo.DataDevolucao">Data de Devolução</label>
-                <input type="date" asp-for="Emprestimo.DataDevolucao" class="form-control"/>
-            </div>
             <div class="form-group">
                 <label asp-for="Emprestimo.LivroId">Livro</label>
                 <select asp-for="Emprestimo.LivroId" class="form-control">
@@ -35,6 +27,14 @@
                         <option value="@l.Id">@l.Titulo</option>
                     }
                 </select>
+            </div>
+            <div class="form-group">
+                <label asp-for="Emprestimo.DataEmprestimo">Data do empréstimo</label>
+                <input type="date" asp-for="Emprestimo.DataEmprestimo" class="form-control" required/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Emprestimo.DataDevolucao">Data final do emprestimo</label>
+                <input type="date" asp-for="Emprestimo.DataDevolucao" class="form-control" required/>
             </div>
         </fieldset>
         <input type="submit" value="Salvar" class="btn btn-primary"/>
